2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14130: Switching pages with browsebox doesn't work (thanks to Mark Kuiphuis)

2010-06-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13506: [felogin] Function changePassword does not work, when hitting 'enter' in change password form (Thanks to Christian Futterlieb)

2010-05-31  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.4.0beta3

2010-05-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14556: Media content element shows HTML markup in additional flexform configuration

2010-05-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14527: fixPermissions() for ENABLE_INSTALL_TOOL and extension import
	* Fixed bug #13701: @ini_set() works only on windows, on some unices it could render the function unusable (Thanks to Stephan Seitz)

2010-05-31  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14553: topFrameH configuration option doesn't work anymore (Thanks to Stefan Galinski)
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v7
	* Fixed bug #14547: Flags in localization view (list view) have no title
	* Fixed bug #14530: Missing icons in new BE skin (sprites) v6
	* Fixed bug  #12990 : referrer in felogin form is not encoded correctly (Thanks to Jigal van Hemert)
	
2010-05-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13858: IS cannot not index files if absRefPrefix is set and indexExternalURLs is not (thanks to Christian Kuhn and Steffen Ritter for help!)

2010-05-31  Benjamin Mack  <benni@typo3.org>

	* Followup to #13998: Introduce Automatic versioning of CSS and JS files - fixed tabs for install tool
	* Dropped feature #14441: Drop support for GDlib 1.x, GDlib2 is now default
	* Fixed bug #13138: Add hook for manipulating content in felogin extension (Thanks to Thomas Layh)
	* Fixed bug #14540: Replace icons in module menu to use new styles (Thanks to Steffen Gebert)